kubernetes/apps/media-vpn/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: media-vpn
  labels:
    kustomize.toolkit.fluxcd.io/prune: disabled
